copyriht mark added

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       </div>
       <button id="reset-btn">Reset Game</button>
     </main>
+    &copy;
     <script src="app.js"></script>
   </body>
 </html>
